--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "microsoft-cognitiveservices-speech-sdk": "^1.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.0.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.0",
     "universal-cookie": "^8.0.1",
     "web-vitals": "^3.3.2"
